# CppTask2

./: .drone.yml  CMakeLists.txt  Readme.md
Task2/: GCD.cpp  GCD.h  Logarithm.cpp  Logarithm.h  Task2Api.hpp  Taylor.cpp  Taylor.h
Task2.Tests/: GCD.Tests.cpp  Logarithm.Tests.cpp  Taylor.Tests.cpp
